--- a/index.css
+++ b/index.css
@@ -1,6 +1,44 @@
+body, html{
+    padding: 0;
+    margin: 0;
+    height: 100%;
+}
+#main{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
+#content{
+    width: 512px;
+    height: 100%;
+    margin: 0 auto;
+    border: 4px solid black;
+    border-radius: 40px;
+}
+#title{
+    margin: 30px;
+    font-size: 30px;
+    font-weight: bolder;
+}
 #app{
-
+    display: flex;
+    flex-direction: column;
 }
 .phonebooke-item{
-    
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 10px;
+    margin: 20px;
+}
+.phonebooke-item > img{
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+}
+.phonebooke-item > span{
+    font-size: 20px;
+}
+.phonebooke-item > i{
+    font-size: 25px;
 }
