--- a/src/view/list/list.html
+++ b/src/view/list/list.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <title>Document</title>
-    <link rel="stylesheet" href="./index.css" />
-    <script src="localstroageLib.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   </head>
   <body>
     <div id="main">
@@ -15,13 +12,12 @@
         <nav id="title">
           <span>연락처</span>
         </nav>
-        <div id="app">
+        <div id="list">
 
         </div>
       </div>
     </div>
 
 
-    <script src="/app.js"></script>
   </body>
 </html>
