--- a/src/view/list/list.css
+++ b/src/view/list/list.css
@@ -12,8 +12,12 @@ body, html{
     width: 512px;
     height: 100%;
     margin: 0 auto;
-    border: 4px solid black;
-    border-radius: 40px;
+    border: 1px solid black;
+    box-sizing: border-box;
+
+    /*border-radius: 40px;*/
+    display: flex;
+    flex-direction: column;
 }
 #title{
     margin: 30px;
@@ -24,21 +28,21 @@ body, html{
     display: flex;
     flex-direction: column;
 }
-.phonebooke-item{
+.phonebook-item{
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 0 10px;
     margin: 20px;
 }
-.phonebooke-item > img{
+.phonebook-item > img{
     width: 100px;
     height: 100px;
     border-radius: 50px;
 }
-.phonebooke-item > span{
+.phonebook-item > span{
     font-size: 20px;
 }
-.phonebooke-item > i{
+.phonebook-item > i{
     font-size: 25px;
 }
