--- a/src/view/list/list.html
+++ b/src/view/list/list.html
@@ -3,16 +3,21 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <title>Document</title>
   </head>
   <body>
     <div id="main">
       <div id="content">
         <nav id="title">
+          <span></span>
           <span>연락처</span>
+          <span><a href="./create.html">추가</a></span>
         </nav>
-        <div id="list">
+        <div id="search">
+          <input placeholder="찾으려는 사람을 입력해주세요">
+        </div>
+        <div id="list" style="flex: 1; overflow-y: auto">
 
         </div>
       </div>
