--- a/src/view/info/info.html
+++ b/src/view/info/info.html
@@ -1,11 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<h1>상세 페이지 테스트</h1>
 
+<head>
+  <meta charset="UTF-8">
+  <title>Title</title>
+</head>
+
+<body>
+  <div id="main">
+    <div id="content">
+      <header>뒤로가기 메뉴 버튼</header>
+      <img id="profile-pic">
+      <section>
+        <div>
+          <div>이름</div>
+          <h2 id="profile-name"></h2>
+        </div>
+        <div>
+          <div>그룹</div>
+          <h2 id="profile-group"></h2>
+        </div>
+        <div>
+          <div>전화번호</div>
+          <p id="profile-phone"></p>
+        </div>
+        <div>
+          <div>이메일</div>
+          <p id="profile-email"></p>
+        </div>
+      </section>
+      <footer></footer>
+    </div>
+  </div>
+
+  <script type="module" src="./info.js"></script>
 </body>
+
 </html>
