--- a/src/view/info/info.css
+++ b/src/view/info/info.css
@@ -23,3 +23,22 @@ body, html{
     height: 100px;
     border-radius: 50px;
 }
+#header{
+    display: flex;
+    justify-content: space-between;
+}
+#header > button{
+    border: 0;
+    background-color: transparent;
+    font-size: 20px;
+    padding: 15px;
+}
+#header > i{
+    font-size: 50px;
+}
+#header > i:hover{
+    background-color: rgb(184, 179, 179);
+}
+#menu-con{
+    display: none;
+}
