--- a/src/view/info/info.css
+++ b/src/view/info/info.css
@@ -1,44 +1,122 @@
-body, html{
+body,
+html {
     padding: 0;
     margin: 0;
     height: 100%;
 }
-#main{
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-#content{
+
+#content {
     width: 512px;
     height: 100%;
     margin: 0 auto;
     border: 1px solid black;
     box-sizing: border-box;
-
     display: flex;
     flex-direction: column;
 }
-#profile-pic{
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
+
+#img-div {
+    text-align: center;
+    margin-top: 50px;
 }
-#header{
+
+#profile-pic {
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    border: 2px solid black;
+}
+
+#header {
     display: flex;
     justify-content: space-between;
+    position: relative;
 }
-#header > button{
+
+#menu-con {
+    display: none;
+    position: absolute;
+    top: 60px;
+    right: 10px;
+    background-color: #f5f5f5;
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    z-index: 10;
+}
+
+#menu-con button {
+    display: block;
+    background: none;
+    border: none;
+    color: black;
+    padding: 8px 10px;
+    width: 100%;
+    text-align: left;
+}
+
+#menu-con button:hover {
+    background-color: #d1d1d1;
+}
+
+
+#header>button {
     border: 0;
     background-color: transparent;
     font-size: 20px;
     padding: 15px;
 }
-#header > i{
+
+#header>i {
     font-size: 50px;
 }
-#header > i:hover{
-    background-color: rgb(184, 179, 179);
+#back{
+    width: 60px;
+    height: 60px;
+    background-color: transparent;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
-#menu-con{
+#back:hover {
+    background-color: rgba(204, 204, 204, 0.3);
+}
+#menu {
+    width: 60px;
+    height: 60px;
+    background-color: transparent;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#menu:hover {
+    background-color: rgba(200, 200, 200, 0.3);
+    cursor: pointer;
+}
+#menu-con {
     display: none;
+}
+
+#user {margin-top: 70px;}
+
+section p {
+    padding-left: 20px;
+}
+
+#name>div {
+    background-color: rgb(236, 236, 236);
+}
+
+#group>div {
+    background-color: rgb(236, 236, 236);
+}
+
+#phone>div {
+    background-color: rgb(236, 236, 236);
+}
+
+#email>div {
+    background-color: rgb(236, 236, 236);
 }
