--- a/src/view/info/info.html
+++ b/src/view/info/info.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
+<html lang="kr"> <head>
   <meta charset="UTF-8">
-  <title>Title</title>
-  <script src="https://kit.fontawesome.com/6cbdf73c90.js" crossorigin="anonymous"></script>
+  <title>연락처 상세 정보</title> <link rel="stylesheet" href="info.css"> <script src="https://kit.fontawesome.com/6cbdf73c90.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <div id="main">
     <div id="content">
       <header id="header">
-        <button><i class="fa-solid fa-arrow-left"></i></button>
-        <button id="menu"><i class="fa-solid fa-ellipsis-vertical"></i></button>
+        <button id="back-btn"><i class="fa-solid fa-arrow-left"></i></button>
+        <button id="menu-btn"><i class="fa-solid fa-ellipsis-vertical"></i></button>
       </header>
-      <img id="profile-pic">
-      <div id="menu-con">
-        <button id="update">수정</button>
-        <button id="delete">삭제</button>
+      <div id="profile-area">
+          <img id="profile-pic" src="/images/default.jpg"> <div id="menu-container">
+            <button id="update-btn">수정</button>
+            <button id="delete-btn">삭제</button>
+          </div>
       </div>
-      <section>
+      <section id="info-section">
         <div>
           <div>이름</div>
           <h2 id="profile-name"></h2>
