--- a/src/view/info/info.css
+++ b/src/view/info/info.css
@@ -34,6 +34,8 @@ body, html {
 
 #header > button {
 
+}
+
 #img-div {
     text-align: center;
     margin-top: 50px;
@@ -176,6 +178,8 @@ body, html {
     font-size: 18px;
     color: #333;
     word-break: break-all; /* 긴 텍스트 줄바꿈 */
+}
+
 #header>i {
     font-size: 50px;
 }
