--- a/src/view/list/list.html
+++ b/src/view/list/list.html
@@ -15,7 +15,7 @@
           <span><a href="./create.html">추가</a></span>
         </nav>
         <div id="search">
-          <input placeholder="찾으려는 사람을 입력해주세요">
+          <input id="input-search" placeholder="찾으려는 사람을 입력해주세요">
         </div>
         <div id="list" style="flex: 1; overflow-y: auto">
 
