--- a/src/view/edit/edit.css
+++ b/src/view/edit/edit.css
@@ -32,9 +32,9 @@ body, html {
   #app {
     display: flex;
     flex-direction: column;
+    flex: 1;
     align-items: center;
   }
-  
   .profile img {
     width: 100px;
     height: 100px;
@@ -63,9 +63,3 @@ body, html {
     gap: 10px;
     margin-top: 20px;
   }
-  
-  .btn {
-    padding: 10px 20px;
-    font-size: 16px;
-  }
-  
