--- a/src/view/info/info.html
+++ b/src/view/info/info.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
-<html lang="kr"> <head>
-  <meta charset="UTF-8">
-  <title>연락처 상세 정보</title> <link rel="stylesheet" href="info.css"> <script src="https://kit.fontawesome.com/6cbdf73c90.js" crossorigin="anonymous"></script>
+<html lang="kr">
+<head>
+    <meta charset="UTF-8">
+    <title>연락처 상세 정보</title>
+    <link rel="stylesheet" href="info.css">
+    <script src="https://kit.fontawesome.com/6cbdf73c90.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-  <div id="main">
+<div id="main">
     <div id="content">
-      <header id="header">
-        <button id="back-btn"><i class="fa-solid fa-arrow-left"></i></button>
-        <button id="menu-btn"><i class="fa-solid fa-ellipsis-vertical"></i></button>
-      </header>
-      <div id="profile-area">
-          <img id="profile-pic" src="/images/default.jpg"> <div id="menu-container">
-            <button id="update-btn">수정</button>
-            <button id="delete-btn">삭제</button>
-          </div>
-      </div>
-      <section id="info-section">
-    <section id="user">
-      <div id="name">
-        <div>
-          <p>이름</p>
+        <header id="header">
+            <button id="back-btn"><i class="fa-solid fa-arrow-left"></i></button>
+            <button id="menu-btn"><i class="fa-solid fa-ellipsis-vertical"></i></button>
+            <div id="menu-container">
+                <button id="update-btn">수정</button>
+                <button id="delete-btn">삭제</button>
+            </div>
+        </header>
+        <div id="profile-area">
+            <img id="profile-pic" src="/images/default.jpg">
         </div>
-        <p id="profile-name"></p>
-      </div>
-      <div id="group">
-        <div>
-          <p>그룹</p>
-        </div>
-        <p id="profile-group"></p>
-      </div>
-      <div id="phone">
-        <div>
-          <p>전화번호</p>
-        </div>
-        <p id="profile-phone"></p>
-      </div>
-      <div id="email">
-        <div>
-          <p>이메일</p>
-        </div>
-        <p id="profile-email"></p>
-      </div>
-    </section>
-    <footer></footer>
+        <section id="info-section">
+            <section id="user">
+                <div id="name">
+                    <div>
+                        <p>이름</p>
+                    </div>
+                    <p id="profile-name"></p>
+                </div>
+                <div id="group">
+                    <div>
+                        <p>그룹</p>
+                    </div>
+                    <p id="profile-group"></p>
+                </div>
+                <div id="phone">
+                    <div>
+                        <p>전화번호</p>
+                    </div>
+                    <p id="profile-phone"></p>
+                </div>
+                <div id="email">
+                    <div>
+                        <p>이메일</p>
+                    </div>
+                    <p id="profile-email"></p>
+                </div>
+            </section>
+            <footer></footer>
 </body>
 
 </html>
