--- a/src/view/edit/edit.html
+++ b/src/view/edit/edit.html
@@ -23,10 +23,10 @@
         <div class="write"><b>그룹</b><input type="text" id="group"></div>
         <div class="write"><b>전화번호</b><input type="text" id="phone"></div>
        <div class="write"><b>이메일</b><input type="text" id="email"></div>
-        <div class="button-group">
-          <input type="button" value="취소" class="btn" id="cancel">
-          <input type="button" value="저장" class="btn" id="save">
-        </div>
+      </div>
+      <div class="d-flex gap-2 container-fluid mb-2">
+        <input type="button" value="취소" class="w-50 btn btn-outline-danger" id="cancel">
+        <input type="button" value="저장" class="w-50 flex-shrink-1 btn btn-outline-success" id="save">
       </div>
     </div>
   </div>
