--- a/src/view/list/list.css
+++ b/src/view/list/list.css
@@ -1,18 +1,35 @@
 body, html{
     padding: 0;
     margin: 0;
-    height: 100%;
 }
 #main{
     display: flex;
     flex-direction: column;
-    height: 100%;
 }
+#create-btn{
+    color: #222222;
+}
+.input-icon-wrapper {
+    position: relative;
+    display: inline-block;
+    width: 100%;
+}
+
+.input-icon-wrapper i {
+    position: absolute;
+    top: 50%;
+    left: 22px;
+    transform: translateY(-50%);
+    color: #222;
+    pointer-events: none;
+}
+
+
 #content{
     width: 512px;
-    height: 100%;
+    height: 100vh;
     margin: 0 auto;
-    border: 1px solid black;
+    border: 1px solid #dbdddd;
     box-sizing: border-box;
 
     /*border-radius: 40px;*/
@@ -23,6 +40,9 @@ body, html{
     margin: 30px;
     font-size: 30px;
     font-weight: bolder;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 #app{
     display: flex;
@@ -32,19 +52,29 @@ body, html{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0 10px;
+    padding: 10px 2px;
     margin: 20px;
+    border-bottom: 1px solid #ccc;
 }
 .phonebook-item > img{
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
     border-radius: 50px;
 }
 .phonebook-item > span{
+    flex: 1;
+    text-align: start;
+    margin-left: 15px;
     font-size: 20px;
+    font-weight: bold;
 }
 .phonebook-item > i{
     font-size: 25px;
+    border: 1px solid #cccccc;
+    border-radius: 100%;
+    padding: 10px;
+    color:#4cae4c;
+
 }
 #search{
     width: 100%;
@@ -52,12 +82,44 @@ body, html{
     text-align: center;
 }
 #input-search{
-    padding: 10px;
-    width: 85%;
-    margin: 10px;
+    padding: 10px 10px 10px 30px;
+    width: 95%;
+    margin: 0 auto ;
     box-sizing: border-box;
 
+}
 
+#list{
+    margin-top: 25px;
+}
+.section-header{
+    padding: 4px 10px;
+    font-weight: 500;
+    background-color: #dddddddd;
+}
+
+/* 전체 스크롤바 설정 */
+::-webkit-scrollbar {
+    width: 8px; /* 세로 스크롤바 너비 */
+    height: 8px; /* 가로 스크롤바 높이 */
+}
+
+/* 스크롤 트랙 (바탕) */
+::-webkit-scrollbar-track {
+    background: #f0f0f0;
+    border-radius: 10px;
+}
+
+/* 스크롤 핸들 (움직이는 부분) */
+::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 10px;
+    border: 2px solid #f0f0f0; /* 트랙이랑 구분감 */
+}
+
+/* 마우스 hover 시 */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
 }
 @media screen and (max-width: 768px){
 
